# MZ01_AI-Agents-Hub

./: .gitignore  README.md  config.py  main.py  requirements.txt
agents/: research_agent.py
comment-sentiment/: .gitignore  README.md  anleitung.md  annotate_comments.py  config.example.py  fetch_comments.py  generate_html.py  generate_report.py  requirements.txt  run_analysis.py
comment-sentiment/scripts/: compute_metrics.py  plot_intent_shift.py  plot_trends.py
tools/: extract_flashcards.py  fetch_text.py  summarize.py
trend-scanner/: .gitignore  README.md  pyproject.toml
trend-scanner/scripts/: run_daily.py  run_weekly.py
trend-scanner/src/trend_scanner/config/: settings.py
trend-scanner/src/trend_scanner/db/: models.py  session.py
trend-scanner/src/trend_scanner/delivery/: digest_md.py  pdf_report.py  slack.py  slack_webapi.py  weekly_md.py
trend-scanner/src/trend_scanner/ingest/: collector.py  normalizer.py  reddit_client.py
youtube-transcript-service/: transcript_service.py
youtube_analyzer_csv/: .gitignore  README.md  SETUP_GUIDE.md  youtube_analyzer_v2.html  youtube_analyzer_v2_cream.html
